--- a/client/src/Components/Demo.module.css
+++ b/client/src/Components/Demo.module.css
@@ -1,6 +1,7 @@
 .demoContainer
 {
     padding-top:60px;
+    min-height: 100vh;
     background-color: #c6d8d3;
     width:100%;
 }
@@ -31,10 +32,10 @@
 {
     background-color: #D81E5B;
     color: #c6d8d3;
-    height: 50px;
+    height: 60px;
     width: auto;
     padding: 0 15px;
-    font-size: 1.3em;
+    font-size: 1.2em;
     font-weight:600;
     border: none;
     border-radius: 1.5em;
