--- a/client/src/Components/Project.module.css
+++ b/client/src/Components/Project.module.css
@@ -2,11 +2,12 @@
 {
     background-image: linear-gradient( to bottom right, #C6D8D3 35%, #FDF0D5);
     width: 100%;
-    height: 100vh;
+    
     display: flex;
     justify-content: space-around;
     align-items:center;
     padding-top:60px;
+    min-height: 100vh;
 }
 
 .projectBody
